--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#seeMore">See More</a></li>
+            <li><a href="#seeMore">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
     </div>
@@ -154,7 +154,7 @@
     </div>
 
     <div id = "seeMore" class = "seeMore_section"> 
-        <div class = subheader>See More!</div>
+        <div class = subheader>Resume</div>
         <div class = "resume_container">
             <iframe src="Resume.pdf" width="60%" height="500px">
                 If you see this, your browser doesn't support iframes. However, you can <a href="curr_resume.pdf">click here to download the PDF.</a>
