Fixed various styling issues

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <img class = "mobile_img" id="mobile_img_2" src = "images/bb_img_2.png">
                 </div>
                 <div class = "bb_txt_container">
-                    <div class = "proj_title"> Beauty Bar </div>
-                    <p class = "proj_paragraph"> In collaboration with a dynamic team, I played
+                    <div class = "proj_title" id="bb_title_mobile"> Beauty Bar </div>
+                    <p class = "proj_paragraph" id = "bb_paragraph_mobile"> In collaboration with a dynamic team, I played
                         a pivotal role in bringing the Beauty Bar Application Prototype to life.
                         My contributions spanned the entire Software Development Life Cycle (SDLC).
                         This included shaping the project's marketecture, crafting process and logical
@@ -157,9 +157,9 @@
         <div class = subheader>Resume</div>
         <div class = "resume_container">
             <iframe src="Resume.pdf" width="60%" height="500px">
-                If you see this, your browser doesn't support iframes. However, you can <a href="curr_resume.pdf">click here to download the PDF.</a>
             </iframe>
-        </div>        
+            <div class="resume_download"> <a href="Resume.pdf"> Click here to download </a></div>           
+        </div>
     </div>
 
     <div id = "contact" class = "contact_section">
