--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 </div>
                 <div class = "bb_txt_container">
                     <div class = "proj_title" id="bb_title_mobile"> Beauty Bar </div>
-                    <p class = "proj_paragraph" id = "bb_paragraph_mobile"> In collaboration with a dynamic team, I played
+                    <p class = "proj_paragraph" id = "bb_paragraph_mobile"> In collaboration with 2 team members, I played
                         a pivotal role in bringing the Beauty Bar Application Prototype to life.
                         My contributions spanned the entire Software Development Life Cycle (SDLC).
                         This included shaping the project's marketecture, crafting process and logical
-                        view diagrams for seamless flow, defining the software architecture, and
+                        view diagrams, defining the software architecture, and
                         actively participating in the development phase. Using React Native, I focused
-                        on building essential components that empowered independent hairdressers to
-                        showcase their services while enabling users to effortlessly search for specific
+                        on building essential components that allowed hairdressers and others in the beuty industry to
+                        showcase their services while enabling users to search for specific
                         specialties,
                         book appointments, and provide valuable feedback through reviews.
                         </p>
@@ -95,11 +95,9 @@
                     <p class = "proj_paragraph">
                         As a collaborative effort, I contributed significantly to the
                         development of an Image Gallery Website. In this project, I utilized React to code the frontend,
-                        establishing a seamless connection to Cloudinary's API. This integration e
-                        mpowered users to effortlessly post, store, and search their images,
+                        establishing a seamless connection to Cloudinary's API. This integration allowed users to  post, store, and search their images,
                         enhancing the website's functionality and user seeMore. Our teamwork
-                        ensured the successful execution of this project, resulting in a user-friendly
-                        platform for image management.
+                        ensured the successful execution of this project.
                     </p>
                 </div>
                 <div class = "web_img_container">
@@ -120,8 +118,7 @@
                         improved my front-end coding proficiency by using HTML and CSS to design a user-friendly web page.
                         To enhance the user seeMore, I added interactive elements with JavaScript to
                         present my resume information in a web-based format. This made it easily accessible and visually engaging.
-                        This web portfolio project not only improved my coding skills but also provided a
-                        modern and compelling way to display my professional journey and accomplishments.
+                     
 
                     </p>
                 </div>
