--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div id="about" class="about_me">
         <div class="about_me_title"> ABOUT ME </div>
-        <p class="about_me_content">Hello :) I am a Junior at Villanova University majoring in Computer Science. My passion lies in software development and problem-solving. My time as a Software Engineer Intern at Chubb allowed me to delve deep into data migration from on-premises servers to cloud platforms and refine my Python scripting skills, especially in data validation. Outside of internships, I've taken on projects that demonstrate my prowess in web application development, particularly using tools like HTML, CSS, JavaScript, and React as well as mobile development using React Native. With a keen interest in promoting diversity, equity, and inclusion, I actively engage with Villanova’s Computer Science DEI Committee. I am eager to connect with anyone and start my career in Software Engineering! 
+        <p class="about_me_content">Hello! I am a Junior at Villanova University majoring in Computer Science. My passion lies in software development and problem-solving. My time as a Software Engineer Intern at Chubb allowed me to delve deep into data migration from on-premises servers to cloud platforms and refine my Python scripting skills, especially in data validation. Outside of internships, I've taken on projects that demonstrate my prowess in web application development, particularly using tools like HTML, CSS, JavaScript, and React as well as mobile development using React Native. With a keen interest in promoting diversity, equity, and inclusion, I actively engage with Villanova’s Computer Science DEI Committee. I am eager to connect with anyone and start my career in Software Engineering! 
         </p>
     </div>
 
